--- a/platformio.ini
+++ b/platformio.ini
@@ -23,3 +23,23 @@ build_flags =
 [env:send]
 build_flags =
     -DSEND_ACTIVITY
+    
+[env:disco_test]
+platform = ststm32@16.1.0
+board = disco_f072rb
+framework = zephyr
+lib_deps = TimeStamp
+build_flags =
+    -DTESTING_ENV
+platform_packages =
+    platformio/tool-renode
+test_testing_command =
+    ${platformio.packages_dir}/tool-renode/renode
+    ;--disable-xwt
+    ;--console
+    -e mach create "stm32f072b"
+    -e machine LoadPlatformDescription @platforms/boards/stm32f072b_discovery.repl
+    -e sysbus LoadELF @${platformio.build_dir}/${this.__env__}/firmware.elf
+    -e showAnalyzer sysbus.usart1
+    -e start
+    -e sysbus.usart1 DumpHistoryBuffer
