--- a/zephyr/prj.conf
+++ b/zephyr/prj.conf
@@ -1,3 +1,12 @@
 CONFIG_CAN=y
 CONFIG_CAN_INIT_PRIORITY=80
 CONFIG_CAN_MAX_FILTER=5
+CONFIG_SERIAL=y
+CONFIG_NEWLIB_LIBC=y
+CONFIG_GPIO=y
+CONFIG_PWM=n
+CONFIG_COUNTER=y
+CONFIG_COUNTER_RTC_STM32=y
+CONFIG_COUNTER_RTC_STM32_CLOCK_LSI=y
+CONFIG_CLOCK_CONTROL=y
+CONFIG_CLOCK_CONTROL_STM32_CUBE=y
