--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,10 @@ build_flags =
 build_flags =
     -DSEND_ACTIVITY
     
+[env:rtc_test]
+build_flags =
+    -DRTC_TEST
+
 [env:disco_test]
 platform = ststm32@16.1.0
 board = disco_f072rb
@@ -35,8 +39,8 @@ platform_packages =
     platformio/tool-renode
 test_testing_command =
     ${platformio.packages_dir}/tool-renode/renode
-    ;--disable-xwt
-    ;--console
+    --disable-xwt
+    --console
     -e mach create "stm32f072b"
     -e machine LoadPlatformDescription @platforms/boards/stm32f072b_discovery.repl
     -e sysbus LoadELF @${platformio.build_dir}/${this.__env__}/firmware.elf
